--- a/static/draw/ppt.html
+++ b/static/draw/ppt.html
@@ -346,9 +346,9 @@
 						$("#lookdiv").remove();
 					}
 					//牡丹江发版
-					pptsrc = res.result.viewURL.officeView.replace("localhost","218.9.54.195");
+					//pptsrc = res.result.viewURL.officeView.replace("localhost","218.9.54.195");
 					//保定给发版
-					//pptsrc = res.result.viewURL.officeView;
+					pptsrc = res.result.viewURL.officeView;
                     $("#pptsrc").attr("src", pptsrc);
 					
                 }
